# dissmodel-sysdyn

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml
architecture/: index.html
docs/: architecture.md  index.md  models.md  reference.md
examples/cli/: sysdyn_sir.py
examples/notebooks/: sysdyn_chaotic_growth.ipynb  sysdyn_coffee.ipynb  sysdyn_daisyworld.ipynb  sysdyn_homeostasis.ipynb  sysdyn_limited_growth.ipynb  sysdyn_lorenz.ipynb  sysdyn_mono_lake.ipynb  sysdyn_population_growth.ipynb  sysdyn_predator_prey.ipynb  sysdyn_random_walk.ipynb  sysdyn_room_temperature.ipynb  sysdyn_sir.ipynb  sysdyn_tub.ipynb  sysdyn_yeast.ipynb
examples/streamlit/: sysdyn_all.py  sysdyn_sir.py
models/: index.html
site/: 404.html
site/reference/: index.html
site/search/: search_index.json
src/dissmodel_sysdyn/cli/: sysdyn_sir.py
src/dissmodel_sysdyn/models/: __init__.py  chaotic_growth.py  daisyworld.py  homeostasis.py  limited_growth.py  mono_lake.py  random_walk.py  room_temperature.py  tub.py  yeast.py
src/dissmodel_sysdyn/streamlit/: sysdyn_all.py  sysdyn_sir.py
